Oppdatering av swagger for oppdragsinfo
